--- a/Smarl_Overlays/templates/smarl_combo_display.html
+++ b/Smarl_Overlays/templates/smarl_combo_display.html
@@ -31,7 +31,7 @@ Smarl Combo Display
 	function createBoard(data) {
 		boardCreated = true
 		totalCars = data.length // Find out somehow
-		chartSettings = { width: 300, height: 400, margin: {left: 30, right:30, top: 20, bottom:20}}
+		chartSettings = { width: 300, height: 600, margin: {left: 30, right:30, top: 20, bottom:20}}
 		//Scales
 		xScale = d3.scaleLinear()
 			.domain([0,(data.length)])
@@ -138,7 +138,7 @@ Smarl Combo Display
 		.transition()
 		.attr("x",10)
 		.attr("opacity",0.40)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		//Transition update
 		racerBG.transition()
@@ -151,7 +151,7 @@ Smarl Combo Display
 		)
 		.attr("x",10)
 		.attr("opacity",0.40)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		racerBG.exit()
 		.transition()
@@ -184,7 +184,7 @@ Smarl Combo Display
 		.transition()
 		.attr("x",5)
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 		
 		posRects.transition()
 		.attr('y', function(d,i){
@@ -192,7 +192,7 @@ Smarl Combo Display
 		})
 		.attr("x",5)
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 	
 		
 		posRects.exit()
@@ -232,7 +232,7 @@ Smarl Combo Display
 				return 10
 			}})
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		posText.transition()
 		.attr('y',function(d,i){
@@ -246,7 +246,7 @@ Smarl Combo Display
 				return 10
 			}})
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 		
 		posText.exit()
 		.transition()
@@ -324,7 +324,7 @@ Smarl Combo Display
 		.transition()
 		.attr("x",35 )
 		.attr("opacity",1)	
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		colRect.transition()
 		.attr('y',function(d,i){
@@ -332,7 +332,7 @@ Smarl Combo Display
 		}) 
 		.attr("x",35 )
 		.attr("opacity",1)	
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		colRect.exit()
 		.transition()
@@ -374,7 +374,7 @@ Smarl Combo Display
 			return "#"+d['secondary_color'] // TODO Change to secondary color
 		})
 		.attr("opacity",1)	
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
      	.delay(1300)
 		secondary.transition()
 		.attr("d", function(d) {
@@ -384,7 +384,7 @@ Smarl Combo Display
 			return "#"+d['secondary_color'] // TODO Change to secondary color
 		})
 		.attr("opacity",1)	
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		secondary.exit()
 		.transition()
@@ -419,7 +419,7 @@ Smarl Combo Display
 		.transition()
 		.attr("x", 50)
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 		all_elements.push(tagText)
 
 
@@ -429,7 +429,7 @@ Smarl Combo Display
 		}) 
 		.attr("x", 50)
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		tagText.exit()
 		.transition()
@@ -470,7 +470,7 @@ Smarl Combo Display
 		.transition()
 		.attr("x", 110)
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 		all_elements.push(lastLapText)
 
 		lastLapText.transition()
@@ -487,7 +487,7 @@ Smarl Combo Display
 			}
 			return color
 		})
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		lastLapText.exit()
 		.transition()
@@ -540,7 +540,7 @@ Smarl Combo Display
 		.transition()
 		.attr("x", 215)
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 		all_elements.push(lastLapText)
 
 		bestLapText.transition()
@@ -571,7 +571,7 @@ Smarl Combo Display
 			// determines best lap and colors purple
 			return color
 		})
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		bestLapText.exit()
 		.transition()
