--- a/Smarl_Overlays/templates/smarl_focus_display.html
+++ b/Smarl_Overlays/templates/smarl_focus_display.html
@@ -110,19 +110,19 @@ Smarl Focus Display
 		.transition()
 		.attr("x",2)
 		.attr("opacity",1)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		
 		posRects.transition()
 		.attr("x",2)
 		.attr("opacity",1)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 	
 		
 		posRects.exit()
 		.transition()
 		.attr("x",205)
 		.attr("opacity",0)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		.remove()
 		
 		all_elements.push(posRects)
@@ -158,7 +158,7 @@ Smarl Focus Display
 		.transition()
 		.attr("x",35)
 		.attr("opacity",1)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 
 		posText.transition()
 		.attr("x",35)
@@ -175,13 +175,13 @@ Smarl Focus Display
 				return d['pos'].toString() + 'th'
 			}
 		})
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		
 		posText.exit()
 		.transition()
 		.attr("x",210 )
 		.attr("opacity",0)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		.remove()
 		
 		
@@ -208,7 +208,7 @@ Smarl Focus Display
 		.transition()
 		.attr("x",185 )
 		.attr("opacity",1)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 
 		nameText.transition()
 		.attr('y',2)
@@ -216,14 +216,14 @@ Smarl Focus Display
 		.attr('fill','white')
 		.attr("opacity",1)
 		.text(function(d,i){ return d['name']})
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 
 
 		nameText.exit()
 		.transition()
 		.attr("x",500 )
 		.attr("opacity",0)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		.remove()
 		all_elements.push(nameText)
 
@@ -247,7 +247,7 @@ Smarl Focus Display
 		.transition()
 		.attr("x",185 )
 		.attr("opacity",1)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		
 
 		ownerText.transition()
@@ -256,14 +256,14 @@ Smarl Focus Display
 		.attr('fill','white')
 		.attr("opacity",1)
 		.text(function(d,i){ return  "Owner: " + d['owner']})
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 
 
 		ownerText.exit()
 		.transition()
 		.attr("x",500 )
 		.attr("opacity",0)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		.remove()
 		all_elements.push(ownerText)
 		
@@ -290,7 +290,7 @@ Smarl Focus Display
 		.transition()
 		.attr("x",91 )
 		.attr("opacity",1)	
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 
 		colRect.transition()
 		.attr("x",91 )
@@ -302,14 +302,14 @@ Smarl Focus Display
 		.attr('stroke',function(d,i){
 			return "#"+d['tertiary_color']
 		})
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 
 		colRect.exit()
 		.transition()
 		.attr("x",235 )
 		.attr("opacity",0)
 		.attr('y',20) 
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		.remove()
 
 		all_elements.push(colRect)
@@ -346,7 +346,7 @@ Smarl Focus Display
 		})
 		//.attr("x",235)
 		.attr("opacity",1)	
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		.delay(1000)
 		secondary.transition()
 		.attr("d", function(d) {
@@ -356,14 +356,14 @@ Smarl Focus Display
 			return "#"+d['secondary_color']
 		})
 		.attr("opacity",1)	
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 
 		secondary.exit()
 		.transition()
 		.attr('y',5) 
 		.attr("x",1900)
 		.attr("opacity",0)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		.remove()
 		all_elements.push(secondary)
 
@@ -394,7 +394,7 @@ Smarl Focus Display
 		.transition()
 		.attr("x", 185)
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 		all_elements.push(lastLapText)
 
 		lastLapText.transition()
@@ -409,7 +409,7 @@ Smarl Focus Display
 			}
 			return color
 		})
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		lastLapText.exit()
 		.transition()
@@ -460,7 +460,7 @@ Smarl Focus Display
 		.transition()
 		.attr("x", 185)
 		.attr("opacity",1)
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 		
 		bestLapText.transition()
 		.attr('y',81) 
@@ -488,7 +488,7 @@ Smarl Focus Display
 			// determines best lap and colors purple
 			return color
 		})
-		.duration(1300)
+		.duration("{{properties.transition_shorter}}")
 
 		bestLapText.exit()
 		.transition()
@@ -525,7 +525,7 @@ Smarl Focus Display
 		.transition()
 		.attr("x", 355)
 		.attr("opacity",1)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		all_elements.push(speedText)
 
 		speedText.transition()
@@ -537,13 +537,13 @@ Smarl Focus Display
 			floatStr = Math.round(floatNum).toString()
 			return "Speed: " + floatStr +" mph"})
 		.attr("opacity",1)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 
 		speedText.exit()
 		.transition()
 		.attr("x", 580)
 		.attr("opacity",0)
-		.duration("{{properties.transition_longer}}")
+		.duration("{{properties.transition_shorter}}")
 		.remove()
 
 	}
